# CS7630

ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ar_loc_base/lib/ar_loc_base/: ar_loc_node
ros2_ws/install/ar_loc_base/share/ar_loc_base/: ar_loc_env.launch.py  package.sh  package.zsh
ros2_ws/install/ar_mapping_base/lib/ar_mapping_base/: ar_mapping_node
ros2_ws/install/ar_mapping_base/share/ar_mapping_base/: aruco_tracker.yaml  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/install/ar_slam_base/lib/ar_slam_base/: tb_slam_node
ros2_ws/install/ar_slam_base/share/ar_slam_base/: package.dsv  package.sh  package.zsh  tb_slam_env.launch.py  tb_slam_only.launch.py
ros2_ws/install/button_server/share/button_server/: package.bash  package.sh  package.zsh
ros2_ws/install/collision_avoidance_base/share/collision_avoidance_base/: ca_auto.launch.py  package.bash  package.dsv  package.sh
ros2_ws/install/cs7630_msgs/share/cs7630_msgs/: local_setup.dsv  package.sh  package.zsh
ros2_ws/install/face_detect_base/lib/face_detect_base/: face_detect_node
ros2_ws/install/face_detect_base/share/face_detect_base/: package.dsv  package.ps1  package.sh
ros2_ws/install/wpa_cli/lib/wpa_cli/: wpa_cli_node  (+2 more)
ros2_ws/log/: latest_build
ros2_ws/src/ar_loc_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/ar_loc_base/ar_loc_base/: rover_kf.py  rover_loc.py  rover_pf.py
ros2_ws/src/ar_loc_base/launch/: ar_loc_only.launch.py
ros2_ws/src/ar_mapping_base/: setup.cfg  setup.py
ros2_ws/src/ar_mapping_base/ar_mapping_base/: mapping_kf.py
ros2_ws/src/ar_mapping_base/launch/: ar_mapping.launch.py  aruco_tracker.launch.xml
ros2_ws/src/ar_slam_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/ar_slam_base/ar_slam_base/: rover_mapping.py
ros2_ws/src/ar_slam_base/launch/: ar_slam.launch.py
ros2_ws/src/collision_avoidance/: CMakeLists.txt
ros2_ws/src/collision_avoidance/launch/: ca.launch.py
ros2_ws/src/collision_avoidance/src/: collision_avoidance.cpp
ros2_ws/src/cs7630_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/cs7630_msgs/msg/: Trajectory.msg
ros2_ws/src/face_detect/: package.xml  setup.cfg  setup.py
ros2_ws/src/face_detect/face_detect_base/: face_detect_node.py
ros2_ws/src/floor_nav/: CMakeLists.txt
ros2_ws/src/floor_nav/include/floor_nav/: SimTasksEnv.h
ros2_ws/src/floor_nav/launch/: launch_rover.launch  launch_server_tb.launch  launch_server_tb.launch.py
ros2_ws/src/floor_nav/missions/: test_planto.py  test_set_heading.py  test_wander.py  wander_random.py
ros2_ws/src/floor_nav/src/: SimTasksEnv.cpp  task_server.cpp
ros2_ws/src/floor_nav/tasks/: TaskAutoDock.h  TaskConstant.cpp  TaskConstant.h  TaskGoTo.cpp  TaskGoTo.h  TaskGoToPose.cpp  TaskGoToPose.h  TaskNav2.cpp  TaskNav2.h  TaskPlanTo.cpp  TaskPlanTo.h  TaskSetBool.cpp  TaskSetBool.h  TaskSetHeading.cpp  TaskSetHeading.h  TaskSetMux.cpp  TaskSetMux.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskTrigger.cpp  TaskTrigger.h  TaskWaitForFace.cpp  TaskWaitForFace.h  TaskWaitForROI.cpp  TaskWaitForROI.h  TaskWander.cpp  TaskWander.h
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/keyboard_teleop/keyboard_teleop/: setup.py
ros2_ws/src/log/: latest_build
ros2_ws/src/obstacle_avoidance_base/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_avoidance_base/launch/: explorer_obstacle.launch.py  planner_obstacle.launch.py  teleop_mux_oa.launch.py  teleop_mux_planner_oa.launch.py
ros2_ws/src/obstacle_avoidance_base/src/: obstacle_avoidance.cpp
ros2_ws/src/occgrid_explorer/: CMakeLists.txt  package.xml
ros2_ws/src/occgrid_explorer/launch/: mapper_params_tb_sync.yaml  planner.launch.py  slam_online_sync.launch.py
ros2_ws/src/occgrid_explorer/src/: occgrid_planner.cpp  path_follower.cpp  path_optimizer.cpp
ros2_ws/src/occgrid_planner/: CMakeLists.txt  package.xml
ros2_ws/src/occgrid_planner/launch/: mapper_params_online_sync.yaml  planner.launch.py
ros2_ws/src/occgrid_planner/src/: occgrid_planner.cpp  path_follower.cpp
ros2_ws/src/occgrid_planner_base/: CMakeLists.txt  package.xml
ros2_ws/src/occgrid_planner_base/launch/: mapper_params_tb_sync.yaml  planner.launch.py  slam_tb_sync.launch.py
ros2_ws/src/occgrid_planner_base/src/: occgrid_planner.cpp  path_follower.cpp
ros2_ws/src/ros_task_manager/: ignore_turtlesim.sh
ros2_ws/src/rover_driver_base/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_driver_base/rover_driver_base/: rover_command.py  rover_kinematics.py
ros2_ws/src/turtlebot_launch/: CMakeLists.txt
ros2_ws/src/turtlebot_launch/config/: .bashrc.ros  gtlpc_cyclonedds.xml  turtlebot_cyclonedds.xml
ros2_ws/src/turtlebot_launch/launch/: autodock.launch.py  kinect.launch.py  kinect_min.launch.py  mapper_params_tb_sync.yaml  minimal.launch.py  slam_tb_sync.launch.py  tb_slam_env.launch.py  turtlebot_cartographer.lua  turtlebot_cartographer.rviz
ros2_ws/src/turtlebot_launch/scripts/: record_mapping_bag.sh  test_autodock.sh
ros2_ws/src/turtlebot_launch/urdf/: turtlebot.urdf.xacro  turtlebot_hardware.urdf.xacro  turtlebot_kinect.urdf.xacro  turtlebot_standalone.urdf.xacro
ros2_ws/src/vrep4_helpers/: CMakeLists.txt
ros2_ws/src/vrep4_helpers/install/: local_setup.sh  setup.sh
ros2_ws/src/vrep4_helpers/install/vrep4_helpers/lib/vrep4_helpers/: image_flip
ros2_ws/src/vrep4_helpers/install/vrep4_helpers/share/vrep4_helpers/: kinect_pc_min.launch.py  local_setup.sh  package.sh  package.xml
ros2_ws/src/vrep4_helpers/install/vrep4_helpers/share/vrep4_helpers/cmake/: vrep4_helpersConfig.cmake
ros2_ws/src/vrep4_helpers/log/: latest_build
ros2_ws/src/vrep4_helpers/src/: clock_repeat.cpp  image_flip.cpp
ros2_ws/src/vrep_ros_teleop/: setup.cfg  setup.py
ros2_ws/src/vrep_ros_teleop/vrep_ros_teleop/: teleop.py
ros2_ws/src/wifi_map_base/: CMakeLists.txt
ros2_ws/src/wifi_map_base/src/: wifi_map_node.cpp
ros2_ws/src/wpa_cli/: nmcli  nmcli_scan.sh  package.xml  setup.cfg  setup.py
ros2_ws/src/wpa_cli/launch/: wpa_cli.launch.py
ros2_ws/src/wpa_cli_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/wpa_cli_msgs/msg/: Scan.msg
(+340 files in other folders)
